# saleor-app-framework-python

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Procfile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: check-pr.yml  documentation.yml
docs/: index.md
docs/event_handlers/: http.md  sqs.md
docs/local_app_development/: index.md
docs_overrides/: main.html
event_handlers/http/: index.html
event_handlers/sqs/: index.html
local_app_development/: index.html
saleor_app/: conf.py  endpoints.py  graphql.py
saleor_app/tests/: sample_app.py  test_install.py
saleor_app_framework/app_framework/: routes.py
saleor_app_framework/app_framework/core/: conf.py  errors.py  graphql.py  install.py  manifest.py  types.py  validators.py
saleor_app_framework/app_framework/core/tests/: test_conf.py
saleor_app_framework/app_framework/endpoints/: configuration.py  deps.py  manifest.py  webhook.py
saleor_app_framework/app_framework/schemas/: core.py  manifest.py
saleor_app_framework/app_framework/schemas/webhooks/: __init__.py  core.py  handlers.py  payments.py
saleor_app_framework/app_framework/tests/: test_routes.py
samples/complex_app/: __main__.py  app.py  configuration_endpoints.py  db.py  readme.md  settings.py  webhooks.py
samples/complex_app/endpoints/: configuration.py  extension.py
samples/complex_app/static/configuration/: configuration.d37b7a4733ed4923d330.js  index.html
samples/simple_app/: __main__.py  app.py  readme.md
samples/simple_app/static/configuration/: configuration.106459711ea7f4f841a4.js  index.html
samples/single_tenant_app/: __main__.py  app.py  db.py  manifest.py  readme.md
search/: search_index.json
src/saleor_app/: apka.py  app.py  conf.py  deps.py  endpoints.py  errors.py  exception_handlers.py  graphql.py  http.py  install.py  mutations.py  security.py  settings.py  utils.py  validators.py  webhook.py
src/saleor_app/saleor/: client.py  exceptions.py  mutations.py  utils.py
src/saleor_app/schemas/: core.py  exception_handlers.py  handlers.py  manifest.py  principals.py  utils.py  webhook.py
src/saleor_app/tests/: conftest.py  sample_app.py  sample_settings.py  test_app.py  test_conf.py  test_deps.py  test_endpoints.py  test_exception_handlers.py  test_graphql.py  test_install.py
src/saleor_app/tests/saleor/: test_client.py
src/saleor_app/workers/: base.py  errors.py  sqs.py
