[tool.poetry]
name = "saleor-app"
version = "0.1.0"
description = "Saleor app framework"
authors = [ "Saleor Commerce <hello@saleor.io>" ]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"
Jinja2 = "^2.11.3"
aiofiles = "^0.6.0"
aiohttp = "^3.7.4"
jwt = "^1.2.0"

[tool.poetry.dev-dependencies]
ipython = "^7.22.0"
pytest = "^6.2.3"
isort = "^5.8.0"
flake8 = "^3.9.1"
pytest-sugar = "^0.9.4"
pytest-cov = "^2.11.1"
pytest-asyncio = "^0.14.0"
black = "^20.8b1"
pre-commit = "^2.12.1"
tox = "^3.23.1"
tox-poetry = "^0.4.0"
ipdb = "^0.13.9"
httpx = "^0.18.2"

[tool.black]
target_version = ['py38']
include = '\.pyi?$'
exclude = '''
/(\.git/
  |\.eggs
  |\.hg
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.pytest_cache
  |\.tox
  |\.venv
  |node_modules
  |_build
  |buck-out
  |build
  |dist
  |media
  |infrastructure
  |templates
  |locale
  |docs
)/
'''

[tool.isort]
# Vertical Hanging Indent
multi_line_output = 3
include_trailing_comma = true

line_length = 88
known_first_party = ""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, lint, coverage

[testenv]
description = run the test driver with {basepython}
deps = .[develop]
commands =
    pytest src/saleor_app

[testenv:lint]
description = check the code style
basepython = python3.9
commands =
    black --diff --check src/saleor_app
    isort -c -rc --diff src/saleor_app
    flake8 src/saleor_app

[testenv:coverage]
description = [run locally after tests]: combine coverage data and create report
deps =
    coverage
skip_install = True
commands =
    coverage erase
    coverage run --source="saleor_app" -p -m pytest src/saleor_app
    coverage combine
    coverage report --fail-under=90
depends =
    py38,
    py39,
parallel_show_output = True
"""
